#2792, OASEエージェントの識別情報をイベントに付与する
